--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,6 +1,11 @@
 <h4 class="text-center">Register to embrace a new world!</h4>
 
-<form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
+<form
+  #form="ngForm"
+  [formGroup]="signupForm"
+  class="form mt-4"
+  (submit)="signup()"
+>
   <div class="form-group">
     <input
       #emailInput
@@ -10,12 +15,18 @@
       autofocus
     />
     <ap-vmessage
-      *ngIf="signupForm.get('email').errors?.required"
+      *ngIf="
+        signupForm.get('email').errors?.required &&
+        (form.submitted || signupForm.get('email').touched)
+      "
       text="Email is required!"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('email').errors?.email"
+      *ngIf="
+        signupForm.get('email').errors?.email &&
+        (form.submitted || signupForm.get('email').touched)
+      "
       text="Invalid e-mail"
     >
     </ap-vmessage>
@@ -28,17 +39,26 @@
       placeholder="full name"
     />
     <ap-vmessage
-      *ngIf="signupForm.get('fullName').errors?.required"
+      *ngIf="
+        signupForm.get('fullName').errors?.required &&
+        (form.submitted || signupForm.get('fullName').touched)
+      "
       text="Full name is required!"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('fullName').errors?.minlength"
+      *ngIf="
+        signupForm.get('fullName').errors?.minlength &&
+        (form.submitted || signupForm.get('fullName').touched)
+      "
       text="Minimum length is 2"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('fullName').errors?.maxlength"
+      *ngIf="
+        signupForm.get('fullName').errors?.maxlength &&
+        (form.submitted || signupForm.get('fullName').touched)
+      "
       text="Maximum length is 40"
     >
     </ap-vmessage>
@@ -51,22 +71,34 @@
       placeholder="user name"
     />
     <ap-vmessage
-      *ngIf="signupForm.get('userName').errors?.required"
+      *ngIf="
+        signupForm.get('userName').errors?.required &&
+        (form.submitted || signupForm.get('userName').touched)
+      "
       text="Username is required!"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('userName').errors?.minlength"
+      *ngIf="
+        signupForm.get('userName').errors?.minlength &&
+        (form.submitted || signupForm.get('userName').touched)
+      "
       text="Minimum length is 2"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('userName').errors?.maxlength"
+      *ngIf="
+        signupForm.get('userName').errors?.maxlength &&
+        (form.submitted || signupForm.get('userName').touched)
+      "
       text="Maximum length is 30"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('userName').errors?.pattern"
+      *ngIf="
+        signupForm.get('userName').errors?.pattern &&
+        (form.submitted || signupForm.get('userName').touched)
+      "
       text="Must be lowercase"
     >
     </ap-vmessage>
@@ -89,25 +121,38 @@
       placeholder="password"
     />
     <ap-vmessage
-      *ngIf="signupForm.get('password').errors?.required"
+      *ngIf="
+        signupForm.get('password').errors?.required &&
+        (form.submitted || signupForm.get('password').touched)
+      "
       text="Password is required!"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('password').errors?.minlength"
+      *ngIf="
+        signupForm.get('password').errors?.minlength &&
+        (form.submitted || signupForm.get('password').touched)
+      "
       text="Minimum length is 8"
     >
     </ap-vmessage>
     <ap-vmessage
-      *ngIf="signupForm.get('password').errors?.maxlength"
+      *ngIf="
+        signupForm.get('password').errors?.maxlength &&
+        (form.submitted || signupForm.get('password').touched)
+      "
       text="Maximum length is 14"
+    >
+    </ap-vmessage>
+
+    <ap-vmessage
+      *ngIf="signupForm.errors?.userNamePassword && form.submitted"
+      text="Username and password must be different"
     >
     </ap-vmessage>
   </div>
 
-  <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">
-    Register
-  </button>
+  <button class="btn btn-primary btn-block">Register</button>
 
   <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
